# ennuf

./: .gitignore  404.html  COPYRIGHT.txt  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: tests.yml
contributing/adding-a-new-layer-type/: index.html
docs/: index.md  installation.md  usage.md
docs/contributing/: adding-a-new-layer-type.md
docs/timeline/: beginnings.md
installation/: index.html
search/: search_index.json
src/: .gitignore  setup.py
src/ennuf/: __init__.py  config.py  main.py  simple_mlp.py
src/ennuf/_internal/: config.py
src/ennuf/_internal/const/: path.py
src/ennuf/_internal/formatters/: __init__.py  base_formatter.py  met_office_minimalist_formatter.py  met_office_um_formatter.py  minimalist_formatter.py  um_formatter.py
src/ennuf/_internal/fortran/: __init__.py  neural_net_mod.f90  sample_multivariate_normal.f90  svr.f90  svr_mod.f90
src/ennuf/_internal/fortran/.ipynb_checkpoints/: neural_net_mod-checkpoint.f90
src/ennuf/_internal/ml_model/: base_activation.py  base_layer.py  model.py  supported_activations.py
src/ennuf/_internal/ml_model/activations/: leaky_relu.py  linear.py  relu.py  sigmoid.py  softmax.py  tanh.py
src/ennuf/_internal/ml_model/layers/: activation.py  activation.py~  concatenate.py  convolutional.py  dense.py  flatten.py  input_layer.py  pooling.py  reshape.py  svr.py
src/ennuf/_internal/translation/: __init__.py
src/ennuf/_internal/translation/keras/: functional.py  keras_layer.py  sequential.py
src/ennuf/_internal/translation/pytorch/: __init__.py  sequential.py
src/ennuf/_internal/translation/sklearn/: svr.py
src/ennuf/_internal/utils/: logger.py  string_utils.py
src/ennuf/const/: path.py
src/ennuf/formatters/: __init__.py  minimalist_formatter.py  um_formatter.py
src/ennuf/keras/: __init__.py
src/ennuf/ml_model/: __init__.py  activation.py  base_activation.py  base_layer.py  layer.py  model.py  supported_activations.py
src/ennuf/ml_model/activations/: leaky_relu.py  linear.py  relu.py  sigmoid.py  tanh.py
src/ennuf/ml_model/layers/: dense.py  input_layer.py
src/ennuf/python_parser/: keras_functional.py
src/ennuf/pytorch/: __init__.py  pytorch_example.py
src/ennuf/sklearn/: __init__.py
src/ennuf/translation/keras/: functional.py  keras_layer.py
src/ennuf/utils/: logger.py  string_utils.py
src/example_package/: _simple_mlp.py  main.py
test/testennuf/: __init__.py  example_test.py
test/testennuf/example_models/: keras_convolutional.py  keras_sequential.py  keras_simple_mlp.py  pytorch_convolutional.py  pytorch_simple_mlp.py  sequential.py  simple_mlp.py  simple_mlp_pytorch.py  t_anomaly_covariances_01.py
test/testennuf/kgo/: template.py  test_keras.py  test_kgo_program_writer.py  test_sklearn.py  test_torch.py
test/testennuf/tmp/: build.sh  io_mod.f90.ignore  main.f90  matrix_txt_reader_mod.f90
test/testennuf/tmp/iotest/: iotest.f90  iotest.py
test/testennuf/weights/: TAC01v001.data-00000-of-00001  TAC01v001.index  checkpoint
timeline/beginnings/: index.html
usage/: index.html
usage/using_ennuf/: index.html
