[tool.poetry]
name = "ennuf"
version = "0.1.1"
description = "Easy Neural Networks in Fortran, a package for translating ML models"
authors = ["Helena Reid <helena.reid@metoffice.gov.uk>"]
readme = "README.md"
packages = [
    { include = "ennuf", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
tensorflow-cpu = "^2.12"
numpy = "^1.23"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
whl2conda = "^23.8.8"
black = "^23.9.1"
pylint = "^2.17.6"
mkdocs-material = "^9.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
