[tool.poetry]
name = "ennuf"
version = "1.1.0"
description = "Easy Neural Networks in Fortran, a package for translating ML models"
authors = ["Helena Reid <helena.reid@metoffice.gov.uk>"]
readme = "README.md"
packages = [
  { include = "ennuf", from = "src" },
  { include = "testennuf", from = "test" },
]

[[tool.poetry.source]]
name = "artifactory-pypi"
url = "https://metoffice.jfrog.io/artifactory/api/pypi/pypi/simple"
priority = "primary"

[[tool.poetry.source]]
20 │ name = "pytorch-cpu"
21 │ priority = "explicit"
22 │ url = "https://download.pytorch.org/whl/cpu"

[tool.poetry.dependencies]
torch = { version = "==2.11.0", source = "pytorch-cpu", markers = "extra=
     │ ='cpu' and extra!='cuda'" }
python = ">=3.10, <=3.13"
tensorflow-cpu = "~2.18"
numpy = "^1.23"
[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
whl2conda = "^23.8.8"
black = "^23.9.1"
pylint = "^2.17.6"
mkdocs-material = "^9.4.2"
matplotlib = "^3.8.1"
jupyter = "^1.1.1"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.pylint.format]
# Maximum number of characters on a single line, higher than default because default is extremely low.
max-line-length = 120

[tool.pylint.variables]
ignored-argument-names = "arg|args|kwargs|_.*|^ignored_|^unused_"

[tool.pylint.messages_control]
disable = [
  # defalt values from pylint
  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead",
  # project specific values
  "missing-module-docstring",
]
